@@ -6,7 +6,7 @@
 
 \description{Convert an integer time to a POSIXct time}
 
-\usage{number.as.POSIXct(t, type=c("unix", "matlab"), tz="UTC")}
+\usage{number.as.POSIXct(t, type=c("unix", "matlab", "gps"), tz="UTC")}
 
 \arguments{
 
@@ -15,19 +15,18 @@
 
     \item{type}{the type of time (see \dQuote{Details}).}
 
-    \item{tz}{a string indicating the time zone.}
+    \item{tz}{a string indicating the time zone, used only for unix and matlab
+        times, since GPS times are always referenced to the UTC timezone.}
 
 }
 
 \details{Unix times, indicated by \code{type="unix"}, are measured in seconds
     since the start of the year 1970.  Matlab times, indicated by
     \code{type="matlab"}, are measured in years since the start of the year
-    1899.  
-    
-    The starting point of time systems is a common source of confusion; for
-    example, some would say that Matlab time starts in the year 1900, but that
-    it starts at 1, not at 0.  Some light is cast on such issues in the
-    \dQuote{Examples} section.)
+    1899.  Thus, in both cases, \code{t} is a vector.  However, for
+    \code{type="gps"}, \code{t} is a two-column matrix, in which the first
+    column is the GPS "week" (referenced to 1999-08-22) and the second column
+    is GPS "second" (i.e. the second within the week).
     
     }
     
