@@ -1,4 +1,5 @@
 0.1-82
+- number.as.POSIXct(): accept GPS times
 - rename e.g. adv.2enu() as to.enu.adv()
 - speed up conversion of ADP and ADV to enu by more than a factor of 10
 - change RDI coordinate handling
